Navbar, Articles, General message

--- a/!5_6_grade/index.html
+++ b/!5_6_grade/index.html
@@ -12,6 +12,36 @@
 
   <body>
 
+    <nav class="navbar">
+
+      <ul>
+
+        <li>
+          <a href="#apex-legends">Apex Legends</a>
+        </li>
+
+        <li>
+          <a href="#rainbow-6">Rainbow 6 Siege</a>
+        </li>
+
+          <a href="#wot">
+
+            <li>World of Tanks</li>
+
+          </a>
+
+        <li>
+          <a href="#lol">League of Legends</a>
+        </li>
+
+        <li>
+          <a href="#fifa19">FIFA19</a>
+        </li>
+
+      </ul>
+
+    </nav>
+
     <header class="mainHeader">
 
     <div>
@@ -20,68 +50,50 @@
 
     </div>
 
-      <nav class="navbar">
-
-        <ul>
-
-          <li>
-            Apex Legends
-          </li>
-
-          <li>
-            Rainbow 6 Siege
-          </li>
-
-          <li>
-            World of Tanks
-          </li>
-
-          <li>
-            League of Legends
-          </li>
-
-          <li>
-            FIFA19
-          </li>
-
-        </ul>
-
-      </nav>
-
     </header>
+
+
+    <div class="mainPage">
+      Sziasztok!<br/>
+      Ezen az oldalon megtalálod a rövid leírását 5 népszerű PC játéknak. Először egy HTML vázat késztíettem a weblapnak, majd CSS kiterjesztésű fájlban szépítgettem rajta. A weblap fejlesztése során megismerkedtem a legtöbb HTML tag-gel, mint például a div-vel az article-el és a title-el. Azt is megtanultam, hogy hogyan tudok hozzáadni id-t vagy class-t egy adott elemhez. CSS-en belül megismertem, hogy hogyan tudok tag-re vagy class-ra stílust írni, valamint azt is, hogy mi a különbség a padding és a margin között. Arra is ráébredtem út közben, hogy a ";" nem teljesen felesleges a billentyűzetemen. <br/>
+      <br/>
+      Ezt az oldalt a Cloud4est projekt napján hoztam létre. A Dynam1C0de csapat tagjai segítettek nekem a munkámban. <br/>
+      <br/>
+      Engem XY-nak hívnak a Királyegyházai Általános Iskola x-edikes tanulója vagyok.
+    </div>
 
     <div class="feed">
 
-        <article>
+        <article id="apex-legends">
           <h2>Apex Legends</h2>
-          <p>
+          <p class="articleContent">
             A Titanfall sorozat battle royale műfajú spin-offja, amiben falon futás és titánok nélkül küzdhetnek a játékosok különböző képességekkel felszerelt karakterek szerepében. Húsz csapat, hatvan fő, egy kielégítően nagy játéktér; fogd, amit tudsz, és maradj háromfős osztagoddal életben!
           </p>
         </article>
 
-        <article>
+        <article id="rainbow-6">
           <h2>Rainbow 6 Siege</h2>
-          <p>
+          <p class="articleContent">
             A Ubisoft multiplayer taktikai akciójátéka, melyben terrorelhárítók csapatai esnek egymásnak. A Ubisoft Rainbow Six: Patriots néven szerette volna folytatni a népszerű szériát, ám saját bevallásuk szerint a koncepció nem nyerte el a játékosok tetszését, ezért változtattak a recepten és így született meg a Rainbow Six: Siege ötlete. Ebben a franchise eddigi részeihez hasonlóan ismét egy magasan képzett csapat tagjaként kell helytállnunk a küldetések során, viszont nagyobb hangsúlyt kapott a multiplayer és a pályák rombolhatósága, mint eddig bármikor. A pozitív végeredményhez - például egy túsz kiszabadításához - elengedhetetlen a csapatmunka, viszont a Ubisoft nem szúr ki azokkal sem, akik nem kedvelik az online élményeket, hiszen nekik szól a Rainbow Six: Siege egyjátékos kihívásokat tartalmazó része.
           </p>
         </article>
 
-        <article>
+        <article id="wot">
           <h2>World of Tanks</h2>
-          <p>
+          <p class="articleContent">
             A World of Tanks nemcsak a videojátékok történetének első rendes harckocsis akciójátéka, hanem ízig-vérig MMO, amelyet ráadásul szerepjáték elemekkel is fűszereztek. Az izgalmas téma többféle műfajt elegyítő feldolgozása egészen újszerű játékmenetet, és egyedi, máshol még tényleg nem tapasztalt élményt kínál. A szigorúan online játékban véletlenszerű 15 vs 15 vagy 30 vs 30 összecsapásokban vehetünk részt, melyek között klánháborúk és történelmi mini-kampányok is helyet kapnak. Utóbbiakat leszámítva minden ütközet során komolyan össze kell majd dolgoznunk online barátainkkal, mert csapatmunka nélkül nemigen lehet boldogulni. A városokban vagy nyílt terepen játszódó változatos, és sokszor nagyon átgondolt stratégiát (sőt, néha diplomáciát) igénylő harcokban addig kell helytállnunk, amíg csapattársainkkal közösen teljesen meg nem semmisítjük az ellenséges csapatot, vagy el nem foglaljuk bázisukat. A gépek három fő csoportját a többnyire egy helyben álló, de pusztító erejű rakétás tüzérség, a fix tornyú tankelhárítók, valamint a könnyű (mozgékony, de gyenge és sérülékeny), közepes (lomhább, de nagyobb tűzerejű), vagy nehéz (lassú, de erős és komoly tűzerejű) tankok alkotják. A fejlesztők mintegy százötven, az 1930-as évektől a koreai háború végéig gyártott, vagy csak prototípusként létező amerikai, német és szovjet tankot modelleztek le, melyek között olyan ritkaságokat is megtalálunk, mint a németek Panzer VII Maus szörnyetege. Az RPG jelleg meglévő gépeink és zsoldos legénységünk fejlesztése során, vagy a garázsunkba begördített egyre jobb tankok megszerzésekor (fa struktúrában) érvényesül, melyekhez serényen gyűjtögethetjük a tapasztalati pontokat.
           </p>
         </article>
 
-        <article>
+        <article id="lol">
           <h2>League of Legends</h2>
-          <p>
+          <p class="articleContent">
             A Riot Games ingyenesen játszható MOBA játéka. Anno a Warcraft 3-hoz nem sokkal megjelenése után elkészült az egyik leghíresebb mod, a Defense of the Ancients (Dota), mely hihetetlen népszerűségre tett szert, és egy komplett új játékstílust (MOBA) teremtett. A Dota sikerét megismételni kívánó Riot Games stúdió 2008-ban bejelentette saját ingyenesen játszható MOBA játékát, a League of Legends-et. A LoL megjelenésekor közvetlenül még nem volt népszerű, ám a játék fejlesztésével és az idő előrehaladtával hatalmas népszerűségre tett szert és megkerülhetetlen szereplője az egyre felkapottabbá váló eSport meccseknek. Maga a játék két szemben álló csapat (alapvetően 5v5, de léteznek más játékmódok is) harcáról szól, melyben minden játékos 1 karaktert irányít. A cél az ellenség bázisában levő 'nexus' lerombolása, melyhez 3, elpusztítandó tornyokkal teli lehetséges útvonal vezet. A játékmenet 3 fő részből áll: a különböző semleges, illetve ellenséges, gép irányította ellenfelekből való pénzszerzés, a különböző felszerelések vásárlása a pénzből, valamint az ellenséges hősök és tornyok elpusztítása. A játék ingyenesen letölthető PC-re.
           </p>
         </article>
-        <article>
+        <article id="fifa19">
           <h2>FIFA19</h2>
-          <p>
+          <p class="articleContent">
             A FIFA franchise 2018-as epizódja olyan különlegességeket kínál a sport- és futballjátékok szerelmeseinek, mint a Bajnokok Ligája jogok, a három karakterre fókuszáló sztori, a változatos játékmódok és olyan technológiai újítások, mint az Active Touch és a Real Player Motion, amelyek a reálisabb labdakezelést és a játékosok folyékony mozgását hivatott élethűen megteremteni.
           </p>
         </article>
