--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ Ez szükséges ahhoz, hogy a böngésző, és egyéb programok
 megfelelően felismerjék. a kódot.
 -->
 
-  <head> <!-- Fej szekció kezdete -->
+  <!-- Fej szekció kezdete -->
+  <head>
 
     <!--
     Ez a szekció az oldal "feje", angolul head. Itt adhatod meg azt a címet,
@@ -15,18 +16,20 @@ megfelelően felismerjék. a kódot.
     Ezen kívül itt tudod megadni az oldalra vonatkozó stílus,
     és egyéb forrás elérési útját. A megadott file-okat az oldal egyben
     fogja kezelni, így a stílus vonatkozik a leírt szövegre.
-  -->
+    -->
 
-    <link href="css/style.css" rel="stylesheet" /> <!-- Stílus beszúrása -->
+     <!-- Stílus beszúrása -->
+    <link href="css/style.css" rel="stylesheet" />
 
-    <title> <!-- Böngésző fülén megjelenő cím -->
+     <!-- Böngésző fülén megjelenő cím -->
+    <title>
       MyGameStar
     </title>
 
   </head> <!--Fej szekció vége -->
 
-
-  <body> <!-- Az oldal tartalmának kezdete -->
+  <!-- Az oldal tartalmának kezdete -->
+  <body>
 
     <!--
     A fenti body tag nyitja meg a szekciót, ahova az oldal tartalmát írhatod.
@@ -34,7 +37,8 @@ megfelelően felismerjék. a kódot.
     Ez lesz az oldal fő eleme, ami a leginkább számít.
     -->
 
-    <nav class="navbar"> <!-- Navigációs sáv kezdete -->
+    <!-- Navigációs sáv kezdete -->
+    <nav class="navbar">
 
       <!--
       Ez egy gyakori elem a mai weboldalaknál, mivel segíti a tájékozódást az
@@ -42,17 +46,21 @@ megfelelően felismerjék. a kódot.
       hogy listázza az aloldalakat.
       -->
 
-      <ul> <!-- Rendezetlen lista kezdete -->
+      <!-- Rendezetlen lista kezdete -->
+      <ul>
 
-        <li> <!-- Lista pont kezdete -->
-          <a href="#apex-legends">Apex Legends</a> <!-- Link elem -->
+        <!-- Lista pont kezdete -->
+        <li>
+
+          <!-- Link elem -->
+          <a href="#apex-legends">Apex Legends</a>
 
           <!--
           Egy link elem <a> több részből áll. A href részben kell megadnod
           a hivatkozás célját. Jelen esetben # -tel kezdődik, mert a jelenlegi
           oldalra hivatkozik, csak annak egy részére.
-          A szövegnek, amit hivatkozássá szeretnél alakítani az <a>IDE</a> közé
-          kell írnod.  
+          A szövegnek, amit hivatkozássá szeretnél alakítani <a>IDE</a> kell
+          írnod.
           -->
 
         </li> <!-- Lista pont vége -->
